--- a/src/style.css
+++ b/src/style.css
@@ -4,13 +4,18 @@
 :root {
     --gray-50: #f9fafb;
     --gray-300: #cbd5e1;
-    --yellow-400: #facc15;
+    --slate-500: #64748b;
+    --emerald-600: #059669;
+    --emerald-800: #065f46;
     --sky-900: #0c4a6e;
+    --gray-800: #1f2937;
     --gray-900: #111827;
 }
 
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 html {
@@ -25,11 +30,14 @@ a {
     color: inherit;
 }
 
+input {
+    appearance: none;
+}
+
 body {
     display: flex;
     flex-direction: column;
-    margin: 0;
-    padding: 0;
+    gap: 1rem;
     min-height: 100vh;
     background: var(--gray-900);
 }
@@ -40,33 +48,218 @@ header {
     align-items: center;
     gap: 1rem;
     padding: 0.55rem;
-    background: var(--gray-300);
+    background: var(--gray-800);
 
     .title {
         font-size: 1em;
         text-transform: uppercase;
         font-weight: bold;
-        color: var(--gray-900);
-    }
-}
-
-@media screen and (max-width: 500px) {
-    header {
-        justify-content: center;
-
-        .title {
-            font-size: 0.86em;
-        }
+        color: var(--gray-50);
     }
 }
 
 /* Main */
 main {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+/* Card */
+.content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.error {
+    display: none;
+    background-color: #ef4444;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    color: var(--gray-50);
+}
+
+.card {
+    display: none;
+    flex-direction: column;
+    gap: 1.2rem;
+    border-radius: 0.6rem;
+    min-width: 260px;
+    padding: 1rem;
+    background: var(--sky-900);
+    color: var(--gray-50);
+}
+
+.card.active {
+    display: flex;
+}
+
+.card-top {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+    & p {
+        font-style: italic;
+        color: var(--gray-300);
+    }
+}
+
+.card-middle {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.weather > p {
+    margin-top: 0.2em;
+}
+
+.weather h2 {
+    display: flex;
+    gap: 0.2em;
+}
+.weather h2 > span {
+    font-size: 0.5em;
+}
+
+.card-bottom {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: auto;
+    gap: 1em;
+}
+
+.feels-like,
+.humidity,
+.wind,
+.pressure {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 15px;
+    background: #fde68a;
+    border-radius: 0.2em;
+    color: var(--gray-800);
+    font-size: 0.8em;
+    cursor: pointer;
+    transition: background 0.3s ease-in-out;
+    min-width: 200px;
+
+    & h3 {
+        font-size: 0.95em;
+    }
+}
+
+.feels-like:hover,
+.humidity:hover,
+.wind:hover,
+.pressure:hover {
+    background: #f59e0b;
+}
+
+.icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.4em;
+}
+
+.btn-switcher {
+    color: var(--gray-800);
+    width: 50%;
+    margin: 0 auto;
+    padding: 0.5em 0.5em;
+    border: none;
+    border-radius: 0.3em;
+    cursor: pointer;
+    background: #f87171;
+    transition: background 0.3s ease-in-out, transform 0.1s ease-in;
+}
+
+.btn-switcher:hover {
+    background: #ef4444;
+}
+.btn-switcher:active {
+    transform: scale(0.96);
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    padding: 1.2rem 0.9rem;
+    border-bottom: 0.1rem solid var(--slate-500);
+}
+
+#myForm {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    width: 100%;
+}
+
+.btn-submit {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    border-radius: 0.45rem;
+    background: var(--emerald-600);
+    padding: 0.4rem 1.4rem;
+    cursor: pointer;
+    transition: all 0.4s ease-in-out;
+}
+
+.btn-submit:hover {
+    background: var(--emerald-800);
+}
+.btn-submit:active {
+    transform: scale(0.95);
+}
+
+.form-control {
+    min-width: 260px;
+}
+
+input[type="search"] {
+    width: 100%;
+    border: none;
+    outline: none;
+    background-color: var(--gray-300);
+    border-radius: 0.2rem;
+    padding: 0.5rem;
+    font-size: 1rem;
+
+    &:focus {
+        border-bottom: 0.2em solid #38bdf8;
+        transition: 0.45s ease;
+        color: var(--gray-900);
+        &::-webkit-input-placeholder {
+            transition: opacity 0.45s ease;
+            opacity: 0;
+        }
+        &::-moz-placeholder {
+            transition: opacity 0.45s ease;
+            opacity: 0;
+        }
+        &:-ms-placeholder {
+            transition: opacity 0.45s ease;
+            opacity: 0;
+        }
+    }
+
+    &::placeholder {
+        font-style: italic;
+    }
+}
+
+.content {
+    flex: 1;
 }
 
 /* Footer */
-
 footer {
     display: flex;
     justify-content: center;
@@ -86,10 +279,84 @@ footer {
     }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 460px) {
+    header {
+        justify-content: center;
+
+        .title {
+            font-size: 0.86em;
+        }
+    }
+
+    .card-bottom {
+        display: flex;
+        flex-direction: column;
+    }
+
     footer {
         flex-direction: column-reverse;
         gap: 0.4rem;
         text-align: center;
+    }
+
+    #myForm {
+        flex-direction: column;
+    }
+}
+
+/* spinner */
+
+.loading {
+    display: block;
+}
+
+.loader {
+    display: none;
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: 0;
+    z-index: 9999;
+}
+.loader .loader_inner {
+    animation: animate 1.5s linear infinite;
+    clip: rect(0, 80px, 80px, 40px);
+    height: 80px;
+    width: 80px;
+    position: absolute;
+    left: calc(50% - 40px);
+    top: calc(50% - 40px);
+}
+@keyframes animate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(220deg);
+    }
+}
+.loader .loader_inner:after {
+    animation: animate2 1.5s ease-in-out infinite;
+    clip: rect(0, 80px, 80px, 40px);
+    content: "";
+    border-radius: 50%;
+    height: 80px;
+    width: 80px;
+    position: absolute;
+}
+@keyframes animate2 {
+    0% {
+        box-shadow: inset #b3dfd8 0 0 0 17px;
+        transform: rotate(-140deg);
+    }
+    50% {
+        box-shadow: inset #b3dfd8 0 0 0 2px;
+    }
+    100% {
+        box-shadow: inset #b3dfd8 0 0 0 17px;
+        transform: rotate(140deg);
     }
 }
